Fix process handleing by OSProcessHandler